# elastic-agent-local

./: .env.example  .gitignore  Makefile  README.md  deploy-fix.sh  docker-compose.yml  fix-all-macs.sh  fix-import.sh  fix-intel.sh  fix-intel2.sh  fix-slow-intel.sh  pyproject.toml  start.sh
data/: ACCESS_PUBLIC_PORTAL.md  AI_AGENT_GROQ_SETUP.md  AI_ASSISTANT_CURRENT_STATE.md  AI_ASSISTANT_IMPLEMENTATION_GUIDE.md  AI_ASSISTANT_QUERY_ARCHITECTURE.md  AI_ASSISTANT_REFACTOR_SUMMARY.md  AI_ASSISTANT_RLS_FIX.md  AI_ASSISTANT_SETUP.md  AI_DYNAMIC_QUERIES_IMPLEMENTATION.md  ALL_NEXT_ACTIONS_EXECUTION_REPORT.md  ARCHITECTURE_FIX.md  ARCHITECTURE_SEPARATION.md  ATOMIC_ROOM_RESERVATION.md  AUTOMATED_COMMUNICATIONS.md  BOOKINGCOM_SETUP_GUIDE.md  BOOKING_BUTTON_VISIBILITY_FIX.md  BOOKING_COM_INTEGRATION_COMPLETE_GUIDE.md  BOOKING_ENGINE_FIX.md  BOOKING_ENGINE_PROVIDER_SELECTION.md  BOOKING_GUEST_LINKAGE_FIX.md  BOOKING_STATE_MACHINE.md  BOOKING_UX_IMPROVEMENTS.md  BROWSER_401_FIX.md  BUILD_FAILURE_TROUBLESHOOTING.md  BULK_CHECKIN_CHECKOUT.md  CANONICAL_IMAGE_MODEL_IMPLEMENTATION.md  CLEANUP_COMPLETE_SUMMARY.md  CLEAN_DEPLOY_MERGE_SCRIPT.md  COMMIT_STAGED_CHANGES.md  COMPLETE_EMAIL_FIX_GUIDE.md  COMPLETE_EMAIL_SETUP_CHECKLIST.md  COMPLETE_ENTERPRISE_TEMPLATE_IMPLEMENTATION.md  COMPLETE_SETUP_AND_TEST_GUIDE.md  COMPLETE_VALIDATION_REPORT.md  COMPONENT_SPLITTING_PLAN.md  COMPREHENSIVE_EXPEDIA_BOOKING_API_INTEGRATION.md  CONFIGURE_RESEND_EMAIL.md  CONSOLE_ERRORS_FIXED.md  CRUD_DIAGNOSTIC_AND_FIXES.md  DATA_INTEGRITY_FIX.md  (+267 more)
src/: config.py
tests/: test_agent.py  test_tools.py
(+9 files in other folders)
